# dimalearnrust

./: .gitignore  Cargo.toml  README.md
benchmarks/: Cargo.toml
benchmarks/benches/: bench1.rs  bench2.rs
experiments/: rename.sh
experiments/asm/src/: main.rs
experiments/benchmarking/src/: main.rs
experiments/bit/: Cargo.toml
experiments/complex-num/src/: main.rs
experiments/errors/src/: main.rs
experiments/p-adic/: Cargo.toml
experiments/p-adic/src/: main.rs
experiments/types/: Cargo.toml
experiments/types/src/: main.rs
experiments/unsafety/: Cargo.toml  main.c
experiments/unsafety/src/: main.rs
graph/: Cargo.toml
graph/bfs/src/: main.rs
graph/src/: dijstra.rs  main.rs
graph/topological_sort/: Cargo.toml
linear-algos/euclidean/: Cargo.toml
misc/arcade-grinder/: Cargo.toml  ag_config.yaml
misc/arcade-grinder/src/: README.md  deploy.rs  init.rs  main.rs
misc/asm-experiments/: Cargo.toml  tmp.asm
misc/complex-num-experiments/: Cargo.toml
misc/euler_math/: Cargo.toml
misc/exessing_ping_for_scheduling/: Cargo.toml
misc/exessing_ping_for_scheduling/src/: main.rs
misc/install_bin/: Cargo.toml
misc/misc/: Cargo.toml
misc/mp23/: Cargo.toml
misc/p-adic/: Cargo.toml
misc/parallel_quicksort/: Cargo.toml
misc/teehee/: Cargo.toml
rustalgos/: '  Cargo.toml
serve-page/: Cargo.toml
serve-page/client/: index.html
serve-page/src/: main.rs
serve-page/yew-app/: Cargo.toml
src/: a.txt  ls.rs  main.rs  note  wc.rs
structure/rtree/: Cargo.toml
unix/: find.rs  head.rs  tail.rs  tmp.rs  uniq.rs  wc.rs
(+27 files in other folders)
