[package]
name = "arcade-grinder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
serde = { version = "1.0.204", features = ["derive"] }
once_cell = "1.19.0"
serde_yaml = "0.9.34"
serde_json = "1.0.120"
reqwest = "0.12.5"
log = "0.4.22"
regex = "1.10.5"
home = "0.5.9"

[dependencies.clap]
version = "4.4.6"
features = ["suggestions", "color", "derive", "wrap_help", "cargo"]
