[package]
name = "exessing_ping_for_scheduling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }

[profile.release]
lto = "fat"
strip = "symbols"
codegen-units = 1
